force-app/main/default/objects/AccountContactRelation/fields/Mandat_delegation_achat_signe__c.field-meta.xml
<CustomField>
    <fullName>Mandat_delegation_achat_signe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandat de délégation d&apos;achat signé</label>
    <type>Checkbox</type>
</CustomField>