force-app/main/default/objects/AccountContactRelation/fields/numero_de_telephone__c.field-meta.xml
<CustomField>
    <fullName>numero_de_telephone__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>numéro de téléphone</label>
    <type>Text</type>
</CustomField>